[update]弃用登陆弹窗，增加登录注册退出按钮，增加头像选择点击交互样式。调整二级菜单弹出位置。

--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -8,16 +8,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:id="@+id/line"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
             android:src="@drawable/line"
-            android:paddingVertical="10dp"
+            android:layout_marginVertical="5dp"
             />
 
         <LinearLayout
