--- a/WebViewApp/app/src/main/res/layout/content_user.xml
+++ b/WebViewApp/app/src/main/res/layout/content_user.xml
@@ -4,28 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
-    <LinearLayout
-        android:id="@+id/back_to"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:rotationY="180"
-            android:layout_margin="10dp"
-            android:src="@drawable/forward_arrow" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="返回"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black"
-            android:textSize="18sp"/>
+<!--    <LinearLayout-->
+<!--        android:id="@+id/back_to"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        android:orientation="horizontal">-->
+<!--        <ImageView-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:rotationY="180"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:src="@drawable/forward_arrow" />-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="返回"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="18sp"/>-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
 
 
@@ -39,7 +39,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_to"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:navGraph="@navigation/nav_graph" />
 
