--- a/WebViewApp/app/src/main/res/layout/fragment_first.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_first.xml
@@ -8,35 +8,71 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginLeft="144dp"
-        android:layout_marginTop="88dp"
-        android:background="@color/black"
-        android:src="@drawable/ic_launcher_foreground"
+        android:layout_width="86dp"
+        android:layout_height="86dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="144dp"
+        android:layout_marginBottom="144dp"
+        android:background="@drawable/avatar_1_raster"
+        app:srcCompat="@drawable/circle"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_first"
-        android:layout_width="100dp"
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/imageView4"
-        app:layout_constraintTop_toBottomOf="@id/imageView4"
-        app:layout_constraintEnd_toEndOf="@id/imageView4"
-        android:text="@string/login"
-        />
-    <Button
-        android:id="@+id/button_signup"
-        android:layout_width="100dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="98dp">
+
+    <EditText
+        android:id="@+id/UserNumber"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/button_first"
-        app:layout_constraintTop_toBottomOf="@id/button_first"
-        app:layout_constraintEnd_toEndOf="@id/button_first"
-        android:text="去注册"
+        android:ems="10"
+        android:hint="@string/requireName"
         />
+
+    <EditText
+        android:id="@+id/loginPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberPassword"
+        android:hint="@string/requirePassword"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_button"
+            android:layout_marginVertical="15dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/login" />
+
+        <Button
+            android:id="@+id/signupButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/recetangle_radius"
+            android:layout_marginVertical="15dp"
+            android:layout_marginLeft="10dp"
+            android:text="@string/sign_up" />
+
+         </LinearLayout>
+    </LinearLayout>
+
 
 
 
