--- a/WebViewApp/app/src/main/res/layout/loginwindow.xml
+++ b/WebViewApp/app/src/main/res/layout/loginwindow.xml
@@ -3,21 +3,24 @@
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginHorizontal="10dp"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="98dp">
 
         <EditText
             android:id="@+id/UserNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="输入用户名"
+            android:hint="@string/requireName"
              />
 
         <EditText
@@ -26,7 +29,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="numberPassword"
-            android:hint="输入密码"/>
+            android:hint="@string/requirePassword"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,19 +38,23 @@
 
             <Button
                 android:id="@+id/loginButton"
-                android:layout_width="71dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginHorizontal="10dp"
-                android:text="Login" />
+                android:background="@drawable/rounded_button"
+                android:layout_marginVertical="15dp"
+                android:layout_marginRight="10dp"
+                android:text="@string/login" />
 
             <Button
                 android:id="@+id/cancelButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginHorizontal="10dp"
-                android:text="EXIT" />
+                android:background="@drawable/rounded_button"
+                android:layout_marginVertical="15dp"
+                android:layout_marginLeft="10dp"
+                android:text="@string/cancel" />
 
         </LinearLayout>
 
