--- a/WebViewApp/app/src/main/res/layout/activity_edit_record.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_edit_record.xml
@@ -52,7 +52,7 @@
         android:hint="书签标题" />
 
     <EditText
-        android:id="@+id/details"
+        android:id="@+id/url"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
