--- a/WebViewApp/app/src/main/res/layout/fragment_history.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_history.xml
@@ -29,19 +29,18 @@
 
         <com.example.webviewapp.ui.view.RecordEditButton
             android:id="@+id/delete_all"
-            android:layout_width="0dp"
-            android:layout_height="282dp"
+            android:layout_width="15dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:background="@color/white" />
 
         <com.example.webviewapp.ui.view.RecordEditButton
             android:id="@+id/delete"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:visibility="gone" />
+            android:layout_weight="1" />
 
         <com.example.webviewapp.ui.view.RecordEditButton
             android:id="@+id/select_all"
