--- a/WebViewApp/app/src/main/res/layout/record_item.xml
+++ b/WebViewApp/app/src/main/res/layout/record_item.xml
@@ -32,7 +32,7 @@
 
 
     <TextView
-        android:id="@+id/details"
+        android:id="@+id/url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -50,7 +50,7 @@
         android:layout_marginTop="8dp"
         android:background="#C0C0C0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/details" />
+        app:layout_constraintTop_toBottomOf="@+id/url" />
 
     <CheckBox
         android:id="@+id/checkbox"
