--- a/WebViewApp/app/src/main/res/layout/activity_picture_view.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_picture_view.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".ui.activity.PictureViewActivity">
 
     <androidx.viewpager.widget.ViewPager
@@ -12,18 +13,24 @@
 
     <ImageView
         android:id="@+id/back_button"
+        android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/arrow" />
 
     <TextView
         android:id="@+id/order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="1 / 2"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         android:layout_gravity="bottom|start" />
 
     <ImageView
         android:id="@+id/save"
+        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
