--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -19,8 +19,7 @@
             android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
             android:src="@drawable/line"
-            android:layout_marginVertical="5dp"
-            />
+            android:layout_marginVertical="5dp" />
 
         <LinearLayout
             android:id="@+id/menu1"
