[new feature]：新增视频横竖屏适配、声音调整

--- a/WebViewApp/app/src/main/res/layout/activity_main.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,13 @@
     android:background="@color/black"
     tools:context=".ui.activity.MainActivity">
 
-    <!--        <androidx.appcompat.widget.Toolbar-->
-    <!--            android:id="@+id/toolbar"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:background="?attr/colorPrimary"-->
-    <!--            android:minHeight="?attr/actionBarSize"-->
-    <!--            android:theme="?attr/actionBarTheme"-->
-    <!--            tools:layout_editor_absoluteY="90dp" />-->
-
 
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </WebView>
-
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SearchView
         android:id="@+id/searchbar"
@@ -36,6 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:showAsAction="always" />
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="wrap_content"
