--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -23,14 +23,14 @@
             android:src="@drawable/line" />
 
         <LinearLayout
-            android:id="@+id/menu1"
+            android:id="@+id/user_center"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_below="@id/line"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/user"
+                android:id="@+id/user_image"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -49,21 +49,21 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/menu2"
+            android:id="@+id/menu"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@id/menu1"
+            android:layout_below="@id/user_center"
             android:orientation="horizontal">
 
             <RelativeLayout
-                android:id="@+id/addbookmark"
+                android:id="@+id/add_bookmark_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="5dp"
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/addbookmark_text"
+                    android:id="@+id/add_bookmark_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -74,16 +74,16 @@
                     android:textSize="14sp" />
 
                 <ImageView
-                    android:id="@+id/addbookmark_image"
+                    android:id="@+id/add_bookmark_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_above="@id/addbookmark_text"
+                    android:layout_above="@id/add_bookmark_text"
                     android:layout_weight="1"
                     android:src="@drawable/uncollected" />
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/bookmarkAndhistory"
+                android:id="@+id/history_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="5dp"
@@ -110,7 +110,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/refresh"
+                android:id="@+id/refresh_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="5dp"
@@ -137,14 +137,14 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/user_button"
+                android:id="@+id/quit_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="5dp"
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/user_button_text"
+                    android:id="@+id/quit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -155,10 +155,10 @@
                     android:textSize="14sp" />
 
                 <ImageView
-                    android:id="@+id/user_image"
+                    android:id="@+id/quit_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_above="@id/user_button_text"
+                    android:layout_above="@id/quit_text"
                     android:layout_weight="1"
                     android:src="@drawable/quit" />
             </RelativeLayout>
