--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <RelativeLayout
         android:id="@+id/menu_whole"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle"
-        android:layout_marginBottom="40dp"
+        android:gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -16,18 +17,17 @@
         <ImageView
             android:id="@+id/line"
             android:layout_width="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
-            android:src="@drawable/line"
+            android:layout_centerHorizontal="true"
             android:layout_marginVertical="5dp"
-            />
+            android:src="@drawable/line" />
 
         <LinearLayout
             android:id="@+id/menu1"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:layout_below="@id/line">
+            android:layout_below="@id/line"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/user"
@@ -52,8 +52,8 @@
             android:id="@+id/menu2"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_below="@id/menu1">
+            android:layout_below="@id/menu1"
+            android:orientation="horizontal">
 
             <RelativeLayout
                 android:id="@+id/addbookmark"
@@ -164,7 +164,6 @@
             </RelativeLayout>
 
         </LinearLayout>
-
 
 
     </RelativeLayout>
