--- a/WebViewApp/app/src/main/res/layout/record_edit_button.xml
+++ b/WebViewApp/app/src/main/res/layout/record_edit_button.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="78dp"
+        android:layout_height="64dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
