[update]:用户管理：用户登录注册调用云接口

--- a/WebViewApp/app/src/main/res/navigation/nav_graph.xml
+++ b/WebViewApp/app/src/main/res/navigation/nav_graph.xml
@@ -19,5 +19,9 @@
         android:id="@+id/SecondFragment"
         android:name="com.example.webviewapp.ui.fragment.signUp.SecondFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second" />
+        tools:layout="@layout/fragment_second" >
+        <action
+            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+    </fragment>
 </navigation>
