[update]修改导航栏样式

--- a/WebViewApp/app/src/main/res/layout/activity_main.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,8 @@
             android:id="@+id/backButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
             android:src="@drawable/search_back_icon" />
 
@@ -68,7 +69,8 @@
             android:id="@+id/nextButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
             android:rotationY="180"
             android:src="@drawable/search_back_icon" />
@@ -77,7 +79,8 @@
             android:id="@+id/refreshButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/home" />
 
@@ -85,7 +88,8 @@
             android:id="@+id/fowardButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/fire" />
 
@@ -93,9 +97,10 @@
             android:id="@+id/menuButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/menu" />
+            app:srcCompat="@drawable/menu"/>
 
     </LinearLayout>
 
