--- a/WebViewApp/app/src/main/res/layout/fragment_label.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_label.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="输入搜索"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -16,6 +17,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="50dp"
         app:layout_constraintStart_toStartOf="@+id/edit_text"
         app:layout_constraintTop_toBottomOf="@+id/edit_text" />
@@ -23,7 +25,7 @@
     <LinearLayout
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         android:visibility="invisible"
