--- a/WebViewApp/app/src/main/res/layout/signupactivity.xml
+++ b/WebViewApp/app/src/main/res/layout/signupactivity.xml
@@ -10,16 +10,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:ignore="MissingConstraints"
-        android:layout_marginHorizontal="10dp"
-        >
+        android:layout_marginHorizontal="10dp">
 
         <EditText
             android:id="@+id/UserNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="输入用户名"
-             />
+            android:hint="输入用户名" />
 
 
         <EditText
@@ -50,7 +48,6 @@
                 android:layout_weight="1"
                 android:layout_marginHorizontal="10dp"
                 android:text="EXIT" />
-
         </LinearLayout>
 
     </LinearLayout>
