--- a/WebViewApp/app/src/main/res/layout/activity_user.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_user.xml
@@ -9,6 +9,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:theme="@style/Theme.WebViewApp.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
@@ -21,6 +22,5 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_user" />
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
