--- a/WebViewApp/app/src/main/res/layout/fragment_first.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_first.xml
@@ -18,8 +18,6 @@
         app:srcCompat="@drawable/circle"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,8 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/requireName"
-        />
+        android:hint="@string/requireName" />
 
     <EditText
         android:id="@+id/loginPassword"
@@ -69,11 +66,6 @@
             android:layout_marginVertical="15dp"
             android:layout_marginLeft="10dp"
             android:text="@string/sign_up" />
-
          </LinearLayout>
     </LinearLayout>
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
