--- a/WebViewApp/app/src/main/res/layout/fragment_second.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_second.xml
@@ -22,8 +22,10 @@
         android:id="@+id/textview_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="68dp"
         android:text="@string/welcome_username"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
