--- a/WebViewApp/app/src/main/res/layout/loginwindow.xml
+++ b/WebViewApp/app/src/main/res/layout/loginwindow.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -20,8 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/requireName"
-             />
+            android:hint="@string/requireName" />
 
         <EditText
             android:id="@+id/loginPassword"
@@ -55,8 +52,6 @@
                 android:layout_marginVertical="15dp"
                 android:layout_marginLeft="10dp"
                 android:text="@string/cancel" />
-
         </LinearLayout>
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
