--- a/WebViewApp/app/src/main/res/layout/fragment_history.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_history.xml
@@ -42,6 +42,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
+            android:background="@color/white"
             android:visibility="gone" />
 
         <com.example.webviewapp.ui.view.RecordEditButton
@@ -50,6 +51,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
+            android:background="@color/white"
             android:visibility="gone" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
